Update Zimmermann-Kundenprojekt-dep in mein Projekt