@@ -285,6 +285,10 @@ dependencies {
     //implementation(platform("io.micrometer:micrometer-tracing-bom:${libs.versions.micrometerTracing.get()}"))
     //implementation(platform("io.zipkin.reporter2:zipkin-reporter-bom:${libs.versions.zipkinReporter.get()}"))
     //implementation(platform("io.zipkin.brave:brave-bom:${libs.versions.brave.get()}"))
+    //implementation(platform("io.micrometer:micrometer-tracing-bom:${libs.versions.micrometerTracing.get()}"))
+    implementation(platform("io.prometheus:prometheus-metrics-bom:${libs.versions.prometheusMetrics.get()}"))
+    //implementation(platform("io.prometheus:simpleclient_bom:${libs.versions.prometheusMetrics.get()}"))
+    //implementation(platform("io.micrometer:micrometer-bom:${libs.versions.micrometer.get()}"))
     //implementation(platform("com.fasterxml.jackson:jackson-bom:${libs.versions.jackson.get()}"))
     //implementation(platform("io.netty:netty-bom:${libs.versions.netty.get()}"))
     //implementation(platform("io.projectreactor:reactor-bom:${libs.versions.reactorBom.get()}"))
@@ -294,8 +298,8 @@ dependencies {
     //implementation(platform("org.springframework.security:spring-security-bom:${libs.versions.springSecurity.get()}"))
     //implementation(platform("ch.qos.logback:logback-parent:${libs.versions.logback.get()}"))
 
-    //testImplementation(platform("org.assertj:assertj-bom:${libs.versions.assertj.get()}"))
-    //testImplementation(platform("org.mockito:mockito-bom:${libs.versions.mockito.get()}"))
+    testImplementation(platform("org.assertj:assertj-bom:${libs.versions.assertj.get()}"))
+    testImplementation(platform("org.mockito:mockito-bom:${libs.versions.mockito.get()}"))
     testImplementation(platform("org.junit:junit-bom:${libs.versions.junitJupiter.get()}"))
     testImplementation(platform("io.qameta.allure:allure-bom:${libs.versions.allureBom.get()}"))
 
@@ -344,17 +348,25 @@ dependencies {
     runtimeOnly("org.flywaydb:flyway-mysql")
 
     implementation("org.springframework.boot:spring-boot-starter-security")
+    implementation("org.springframework.boot:spring-boot-starter-oauth2-resource-server")
     implementation("org.springframework.security:spring-security-crypto")
+
+    implementation("org.springframework.boot:spring-boot-starter-actuator")
     implementation("org.springframework.boot:spring-boot-starter-mail")
     implementation("org.springframework.boot:spring-boot-starter-actuator")
+    implementation("com.c4-soft.springaddons:spring-addons-starter-oidc:${libs.versions.springAddonsStarterOidc.get()}") //Ich habe das hinzugefügt
 
     // Tracing durch Micrometer und Visualisierung durch Zipkin
     if (useTracing) {
         println("")
-        println("Tracing mit Zipkin aktiviert")
+        println("Tracing mit   Z i p k i n   aktiviert")
         println("")
         implementation("io.micrometer:micrometer-tracing-bridge-brave")
         implementation("io.zipkin.reporter2:zipkin-reporter-brave")
+    } else {
+        println("")
+        println("Tracing mit   Z i p k i n   d e a k t i v i e r t")
+        println("")
     }
 
     // Metriken durch Micrometer und Visualisierung durch Prometheus/Grafana
@@ -365,10 +377,7 @@ dependencies {
     // https://piotrminkowski.com/2023/09/05/speed-up-java-startup-on-kubernetes-with-crac
     // https://github.com/CRaC/example-spring-boot
     // https://github.com/sdeleuze/spring-boot-crac-demo
-    if (project.properties["crac"] == true) {
-        println("CRaC aktiviert")
-        implementation("org.crac:crac:${libs.versions.crac.get()}")
-    }
+    //implementation("org.crac:crac:${libs.versions.crac.get()}")
 
     compileOnly("org.projectlombok:lombok")
     implementation("org.mapstruct:mapstruct:${libs.versions.mapstruct.get()}")
@@ -429,7 +438,7 @@ dependencies {
         //implementation("org.springframework.security:spring-security-rsa:${libs.versions.springSecurityRsa.get()}")
 
         //runtimeOnly("org.postgresql:postgresql:${libs.versions.postgresql.get()}")
-        //runtimeOnly("com.mysql:mysql-connector-j:${libs.versions.mysql.get()}")
+        runtimeOnly("com.mysql:mysql-connector-j:${libs.versions.mysql.get()}")
         //runtimeOnly("com.h2database:h2:${libs.versions.h2.get()}")
         implementation("jakarta.persistence:jakarta.persistence-api:${libs.versions.jakartaPersistence.get()}")
         //implementation("com.zaxxer:HikariCP:${libs.versions.hikaricp.get()}") // NOSONAR
@@ -506,11 +515,21 @@ tasks.named("bootJar", org.springframework.boot.gradle.tasks.bundling.BootJar::c
     exclude("private-key.pem", "certificate.crt", ".reloadtrigger")
 
     doLast {
+        // CDS = Class Data Sharing seit Spring Boot 3.3.0
+        // https://github.com/spring-projects/spring-boot/wiki/Spring-Boot-3.3.0-M3-Release-Notes#cds-support
+        // https://docs.spring.io/spring-framework/reference/integration/cds.html
         println(
             """
             |
-            |Aufruf der ausfuehrbaren JAR-Datei:
+            |Aufruf der ausfuehrbaren JAR-Datei mit CDS (= Class Data Sharing):
+            |java -Djarmode=tools -jar build/libs/${project.name}-${project.version}.jar extract
+            |java -Djarmode=tools --enable-preview -jar ${project.name}-${project.version}/${project.name}-${project.version}.jar `
+            |     --spring.profiles.active=dev `
+            |     --spring.ssl.bundle.pem.microservice.keystore.private-key=./src/main/resources/private-key.pem `
+            |     --spring.ssl.bundle.pem.microservice.keystore.certificate=./src/main/resources/certificate.crt `
+            |     --spring.ssl.bundle.pem.microservice.truststore.certificate=./src/main/resources/certificate.crt [--debug]
             |
+            |Aufruf der ausfuehrbaren JAR-Datei ohne CDS:
             |java --enable-preview -jar build/libs/${project.name}-${project.version}.jar `
             |     --spring.profiles.active=dev `
             |     --spring.ssl.bundle.pem.microservice.keystore.private-key=./src/main/resources/private-key.pem `
@@ -602,7 +621,7 @@ tasks.named("bootBuildImage", org.springframework.boot.gradle.tasks.bundling.Boo
             )
             imageName = "${imageName.get()}" //!!ich habe hier die -azul gelösct
             println("")
-            println("Buildpacks: JVM durch Azul Zulu")
+            println("Buildpacks: JVM durch   A z u l   Z u l u")
             println("")
         }
         "adoptium" -> {
@@ -615,7 +634,7 @@ tasks.named("bootBuildImage", org.springframework.boot.gradle.tasks.bundling.Boo
             )
             imageName = "${imageName.get()}-eclipse"
             println("")
-            println("Buildpacks: JVM durch Eclipse Temurin")
+            println("Buildpacks: JVM durch   E c l i p s e   T e m u r i n")
             println("")
         }
         "sap-machine" -> {
@@ -627,25 +646,22 @@ tasks.named("bootBuildImage", org.springframework.boot.gradle.tasks.bundling.Boo
             )
             imageName = "${imageName.get()}-sapmachine"
             println("")
-            println("Buildpacks: JVM durch SapMachine")
+            println("Buildpacks: JVM durch   S a p M a c h i n e")
             println("")
         }
         else -> {
-            // Bellsoft Liberica: JRE 8, 11, 17 (default, siehe buildpack.toml: BP_JVM_VERSION), 21
+            // Bellsoft Liberica: JRE 8, 11, 17 (default, siehe buildpack.toml: BP_JVM_VERSION), 21, 22
             // https://github.com/paketo-buildpacks/bellsoft-liberica/releases
-            // TODO https://github.com/paketo-buildpacks/bellsoft-liberica/issues/565
+            imageName = "${imageName.get()}-bellsoft"
             println("")
-            println("Buildpacks: JVM durch Bellsoft Liberica (default)")
+            println("Buildpacks: JVM durch   B e l l s o f t   L i b e r i c a   (default)")
             println("")
 
-            // Amazon Coretto: nur JDK, *kein* JRE
-            // https://github.com/paketo-buildpacks/amazon-corretto/releases
-            // Oracle: nur JDK oder GraalVM, *kein* JRE
-            // https://github.com/paketo-buildpacks/oracle/releases
-            // Microsoft OpenJDK: nur JDK, *kein* JRE
-            // https://github.com/paketo-buildpacks/microsoft-openjdk/releases
-            // Alibaba Dragonwell: nur JDK, *kein* JRE
-            // https://github.com/paketo-buildpacks/alibaba-dragonwell/releases
+            // *kein* JRE, nur JDK:
+            // Amazon Coretto     https://github.com/paketo-buildpacks/amazon-corretto/releases
+            // Oracle             https://github.com/paketo-buildpacks/oracle/releases
+            // Microsoft OpenJDK  https://github.com/paketo-buildpacks/microsoft-openjdk/releases
+            // Alibaba Dragonwell https://github.com/paketo-buildpacks/alibaba-dragonwell/releases
         }
     }
 
@@ -835,6 +851,8 @@ modernizer {
 sonarqube {
     properties {
         property("sonar.organization", "Softwarearchitektur und Microservices")
+        property("sonar.projectDescription", "Beispiel fuer Softwarearchitektur")
+        property("sonar.projectVersion", "2024.04.0")
         property("sonar.host.url", "http://localhost:9000")
         property("sonar.token", project.properties["sonarToken"]!!)
         property("sonar.scm.disabled", "true")
@@ -868,7 +886,7 @@ dependencyCheck {
     nvd(
         closureOf<org.owasp.dependencycheck.gradle.extension.NvdExtension> {
             apiKey = (project.properties["nvdApiKey"] as String?)  ?: ""
-            // default: 3500 Millisekunden Wartezeit zwischen den Aufrufen an das NVD API bei einem API-Key, sonst 8000
+            // default: 3500 Millisepatientn Wartezeit zwischen den Aufrufen an das NVD API bei einem API-Key, sonst 8000
             //delay = 5000
             // default: max. 10 wiederholte Requests fuer einen Aufruf an das NVD API
             //nvdMaxRetryCount = 20
